--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"next:lint": "next lint",
+		"ts": "bunx --bun tsc -w --noEmit",
+		"format": "bunx @biomejs/biome format --write ./src",
+		"lint": "bunx @biomejs/biome lint --write --unsafe ./src"
 	},
 	"dependencies": {
 		"@radix-ui/react-icons": "^1.3.0",
