--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
 		"next": "14.2.15",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.13.1",
