--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
 		"next": "14.2.15",
+		"next-auth": "^5.0.0-beta.23",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
