--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"axios": "^1.7.7",
+		"bitcoinjs-lib": "^7.0.0-rc.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.11.9",
@@ -25,6 +26,7 @@
 		"matter-js": "^0.20.0",
 		"next": "14.2.15",
 		"next-themes": "^0.3.0",
+		"qrcode.react": "^4.0.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.13.1",
@@ -33,7 +35,8 @@
 		"react-window-infinite-loader": "^1.0.9",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
-		"taproot_assets": "."
+		"taproot_assets": ".",
+		"tiny-secp256k1": "^2.2.3"
 	},
 	"devDependencies": {
 		"@types/matter-js": "^0.19.7",
