--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@bitcoinerlab/secp256k1": "^1.1.1",
+		"@number-flow/react": "^0.2.3",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
