--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.13.1",
+		"react-use": "^17.5.1",
 		"react-virtualized-auto-sizer": "^1.0.24",
 		"react-window": "^1.8.10",
 		"react-window-infinite-loader": "^1.0.9",
