--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
     "light-bolt11-decoder": "^3.2.0",
     "lucide-react": "^0.453.0",
