--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "bun --bun run next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"next:lint": "next lint",
@@ -42,7 +42,7 @@
 	"devDependencies": {
 		"@types/matter-js": "^0.19.7",
 		"@types/node": "^22",
-		"@types/react": "npm:types-react@19.0.0-alpha.3",
+		"@types/react": "^19.0.0-alpha.3",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
 		"@types/react-window": "^1.8.8",
 		"@types/react-window-infinite-loader": "^1.0.9",
