--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"qrcode.react": "^4.1.0",
 		"react": "19.0.0-rc-65a56d0e-20241020",
 		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react-use": "^17.5.1",
 		"react-virtualized-auto-sizer": "^1.0.24",
 		"react-window": "^1.8.10",
 		"react-window-infinite-loader": "^1.0.9",
