--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.3",
 		"bitcoinjs-lib": "^7.0.0-rc.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
