--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"bitcoinjs-lib": "^7.0.0-rc.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.3.0",
 		"framer-motion": "^11.11.9",
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
@@ -50,11 +51,13 @@
 		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
 		"@types/react-window": "^1.8.8",
 		"@types/react-window-infinite-loader": "^1.0.9",
+		"babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
 		"eslint": "^9",
 		"eslint-config-next": "15.0.0",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.14",
-		"typescript": "^5"
+		"typescript": "^5.6.3"
 	},
 	"overrides": {
 		"@types/react": "npm:types-react@19.0.0-alpha.3",
