--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"clsx": "^2.1.1",
 		"embla-carousel-react": "^8.3.0",
 		"framer-motion": "^11.11.9",
+		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
 		"next": "15.0.0",
