--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "bun --bun run next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"next:lint": "next lint",
@@ -13,44 +13,55 @@
 	},
 	"dependencies": {
 		"@bitcoinerlab/secp256k1": "^1.1.1",
+		"@number-flow/react": "^0.2.3",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-scroll-area": "^1.2.0",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-toggle": "^1.1.0",
-		"axios": "^1.7.7",
+		"@radix-ui/react-tooltip": "^1.1.3",
 		"bitcoinjs-lib": "^7.0.0-rc.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.3.0",
 		"framer-motion": "^11.11.9",
+		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
-		"next": "14.2.15",
+		"next": "15.0.0",
 		"next-themes": "^0.3.0",
-		"qrcode.react": "^4.0.1",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-intersection-observer": "^9.13.1",
+		"qrcode.react": "^4.1.0",
+		"react": "19.0.0-rc-65a56d0e-20241020",
+		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react-use": "^17.5.1",
 		"react-virtualized-auto-sizer": "^1.0.24",
 		"react-window": "^1.8.10",
 		"react-window-infinite-loader": "^1.0.9",
+		"swr": "^2.2.5",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
-		"taproot_assets": ".",
-		"tiny-secp256k1": "^2.2.3",
 		"uint8array-tools": "^0.0.9"
 	},
 	"devDependencies": {
 		"@types/matter-js": "^0.19.7",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/node": "^22",
+		"@types/react": "^19.0.0-alpha.3",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
 		"@types/react-window": "^1.8.8",
 		"@types/react-window-infinite-loader": "^1.0.9",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.15",
+		"babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
+		"eslint": "^9",
+		"eslint-config-next": "15.0.0",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
 		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	},
+	"overrides": {
+		"@types/react": "npm:types-react@19.0.0-alpha.3",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3"
 	}
 }
