--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "bun --bun run next dev --turbo",
-		"build": "next build",
-		"start": "next start",
-		"next:lint": "next lint",
+		"build": "bun --bun run next build",
+		"start": "bun --bun run next start",
+		"next:lint": "bun --bun run next lint",
 		"ts": "bunx --bun tsc -w --noEmit",
 		"format": "bunx @biomejs/biome format --write ./src",
 		"lint": "bunx @biomejs/biome lint --write --unsafe ./src"
@@ -31,11 +31,11 @@
 		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.453.0",
 		"matter-js": "^0.20.0",
-		"next": "15.0.0",
+		"next": "14.2.15",
 		"next-themes": "^0.3.0",
 		"qrcode.react": "^4.1.0",
-		"react": "19.0.0-rc-65a56d0e-20241020",
-		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react": "^18",
+		"react-dom": "^18",
 		"react-use": "^17.5.1",
 		"react-virtualized-auto-sizer": "^1.0.24",
 		"react-window": "^1.8.10",
@@ -48,8 +48,8 @@
 	"devDependencies": {
 		"@types/matter-js": "^0.19.7",
 		"@types/node": "^22",
-		"@types/react": "^19.0.0-alpha.3",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
+		"@types/react": "18.3.12",
+		"@types/react-dom": "^18",
 		"@types/react-window": "^1.8.8",
 		"@types/react-window-infinite-loader": "^1.0.9",
 		"babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
@@ -59,9 +59,5 @@
 		"postcss": "^8",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
-	},
-	"overrides": {
-		"@types/react": "npm:types-react@19.0.0-alpha.3",
-		"@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3"
 	}
 }
