--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@number-flow/react": "^0.2.5",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
