--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@scure/btc-signer": "^1.4.0",
     "@stacks/common": "^7.0.0",
+    "bip32": "^5.0.0-rc.0",
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.9",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.453.0",
