--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@scure/btc-signer": "^1.4.0",
+    "@stacks/common": "^7.0.0",
+    "bip32": "^5.0.0-rc.0",
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.9",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.453.0",
@@ -41,10 +45,12 @@
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.9",
+    "sats-connect": "^2.8.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "uint8array-tools": "^0.0.9"
+    "uint8array-tools": "^0.0.9",
+    "varuint-bitcoin": "^2.0.0"
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.7",
