--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.1.1",
+    "@noble/secp256k1": "^2.1.0",
     "@number-flow/react": "^0.2.5",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -30,6 +31,7 @@
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ecpair": "^3.0.0-rc.0",
     "embla-carousel-react": "^8.3.0",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.9",
