--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@stacks/common": "^7.0.0",
     "bip32": "^5.0.0-rc.0",
     "bitcoinjs-lib": "^7.0.0-rc.0",
+    "cbor": "^10.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ecpair": "^3.0.0-rc.0",
+    "elliptic": "^6.6.0",
     "embla-carousel-react": "^8.3.0",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.9",
@@ -53,9 +55,11 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uint8array-tools": "^0.0.9",
+    "uuid": "^11.0.2",
     "varuint-bitcoin": "^2.0.0"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.18",
     "@types/matter-js": "^0.19.7",
     "@types/node": "^22",
     "@types/react": "npm:types-react@19.0.0-rc.1",
