--- a/package.json
+++ b/package.json
@@ -1,81 +1,82 @@
 {
-  "name": "taproot_assets",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "bun --bun run next dev --turbopack",
-    "build": "bun --bun run next build",
-    "start": "bun --bun run next start",
-    "next:lint": "bun --bun run next lint",
-    "ts": "bunx --bun tsc -w --noEmit",
-    "format": "bunx @biomejs/biome format --write ./src",
-    "lint": "bunx @biomejs/biome lint --write --unsafe ./src"
-  },
-  "dependencies": {
-    "@bitcoinerlab/secp256k1": "^1.1.1",
-    "@noble/secp256k1": "^2.1.0",
-    "@number-flow/react": "^0.2.5",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@scure/btc-signer": "^1.4.0",
-    "@stacks/common": "^7.0.0",
-    "bip32": "^5.0.0-rc.0",
-    "bitcoinjs-lib": "^7.0.0-rc.0",
-    "cbor": "^10.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "ecpair": "^3.0.0-rc.0",
-    "elliptic": "^6.6.0",
-    "embla-carousel-react": "^8.3.0",
-    "ethers": "^6.13.4",
-    "framer-motion": "^11.11.9",
-    "lottie-react": "^2.4.0",
-    "lucide-react": "^0.453.0",
-    "matter-js": "^0.20.0",
-    "next": "15.0.1",
-    "next-themes": "^0.3.0",
-    "qrcode.react": "^4.1.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-use": "^17.5.1",
-    "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10",
-    "react-window-infinite-loader": "^1.0.9",
-    "sats-connect": "^2.8.3",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "uint8array-tools": "^0.0.9",
-    "uuid": "^11.0.2",
-    "varuint-bitcoin": "^2.0.0"
-  },
-  "devDependencies": {
-    "@types/elliptic": "^6.4.18",
-    "@types/matter-js": "^0.19.7",
-    "@types/node": "^22",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@types/react-window": "^1.8.8",
-    "@types/react-window-infinite-loader": "^1.0.9",
-    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "eslint": "^9",
-    "eslint-config-next": "15.0.1",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  }
+	"name": "taproot_assets",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "bun --bun run next dev --turbopack",
+		"dev:https": "next dev --experimental-https",
+		"build": "bun --bun run next build",
+		"start": "bun --bun run next start",
+		"next:lint": "bun --bun run next lint",
+		"ts": "bunx --bun tsc -w --noEmit",
+		"format": "bunx @biomejs/biome format --write ./src",
+		"lint": "bunx @biomejs/biome lint --write --unsafe ./src"
+	},
+	"dependencies": {
+		"@bitcoinerlab/secp256k1": "^1.1.1",
+		"@noble/secp256k1": "^2.1.0",
+		"@number-flow/react": "^0.2.5",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-scroll-area": "^1.2.0",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"@scure/btc-signer": "^1.4.0",
+		"@stacks/common": "^7.0.0",
+		"bip32": "^5.0.0-rc.0",
+		"bitcoinjs-lib": "^7.0.0-rc.0",
+		"cbor": "^10.0.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"ecpair": "^3.0.0-rc.0",
+		"elliptic": "^6.6.0",
+		"embla-carousel-react": "^8.3.0",
+		"ethers": "^6.13.4",
+		"framer-motion": "^11.11.9",
+		"lottie-react": "^2.4.0",
+		"lucide-react": "^0.453.0",
+		"matter-js": "^0.20.0",
+		"next": "15.0.1",
+		"next-themes": "^0.3.0",
+		"qrcode.react": "^4.1.0",
+		"react": "19.0.0-rc-69d4b800-20241021",
+		"react-dom": "19.0.0-rc-69d4b800-20241021",
+		"react-use": "^17.5.1",
+		"react-virtualized-auto-sizer": "^1.0.24",
+		"react-window": "^1.8.10",
+		"react-window-infinite-loader": "^1.0.9",
+		"sats-connect": "^2.8.3",
+		"swr": "^2.2.5",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"uint8array-tools": "^0.0.9",
+		"uuid": "^11.0.2",
+		"varuint-bitcoin": "^2.0.0"
+	},
+	"devDependencies": {
+		"@types/elliptic": "^6.4.18",
+		"@types/matter-js": "^0.19.7",
+		"@types/node": "^22",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"@types/react-window": "^1.8.8",
+		"@types/react-window-infinite-loader": "^1.0.9",
+		"babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
+		"eslint": "^9",
+		"eslint-config-next": "15.0.1",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	},
+	"overrides": {
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+	}
 }
