--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
 		"@types/react-window": "^1.8.8",
 		"@types/react-window-infinite-loader": "^1.0.9",
+		"@types/ws": "^8.5.13",
 		"babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
 		"eslint": "^9",
 		"eslint-config-next": "15.0.1",
