--- a/package.json
+++ b/package.json
@@ -81,25 +81,25 @@
 		"buffer": "^6.0.3",
 		"clsx": "^2.1.1",
 		"eslint-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
-		"expo": "~52.0.0",
+		"expo": "^52.0.6",
 		"expo-asset": "~11.0.1",
 		"expo-barcode-generator": "^3.0.2",
 		"expo-blur": "~14.0.1",
-		"expo-camera": "~16.0.3",
+		"expo-camera": "~16.0.5",
 		"expo-clipboard": "~7.0.0",
-		"expo-constants": "~17.0.2",
+		"expo-constants": "~17.0.3",
 		"expo-crypto": "~14.0.1",
 		"expo-font": "~13.0.1",
 		"expo-haptics": "~14.0.0",
-		"expo-image": "~2.0.0-preview.1",
+		"expo-image": "~2.0.0",
 		"expo-linking": "~7.0.2",
-		"expo-router": "~4.0.2",
+		"expo-router": "~4.0.5",
 		"expo-sharing": "~13.0.0",
-		"expo-splash-screen": "~0.29.6",
+		"expo-splash-screen": "~0.29.9",
 		"expo-status-bar": "~2.0.0",
 		"expo-symbols": "~0.2.0",
 		"expo-system-ui": "~4.0.2",
-		"expo-web-browser": "~14.0.0",
+		"expo-web-browser": "~14.0.1",
 		"jwt-decode": "^4.0.0",
 		"lottie-react-native": "7.0.0",
 		"lucide-react": "^0.456.0",
@@ -140,7 +140,7 @@
 		"eslint-config-expo": "~8.0.1",
 		"husky": "^9.1.6",
 		"jest": "^29.7.0",
-		"jest-expo": "~52.0.0-preview.3",
+		"jest-expo": "~52.0.1",
 		"jscodeshift": "17.1.1",
 		"lint-staged": "^15.2.10",
 		"react-native-svg-transformer": "^1.5.0",
