chore: add desktop view

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"expo-symbols": "~0.2.0",
 		"expo-system-ui": "~4.0.2",
 		"expo-web-browser": "~14.0.1",
+		"framer-motion": "^11.11.17",
 		"jwt-decode": "^4.0.0",
 		"lottie-react-native": "7.0.0",
 		"lucide-react": "^0.456.0",
