--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@gluestack-ui/tooltip": "^0.1.35",
 		"@gorhom/bottom-sheet": "^5.0.5",
 		"@legendapp/motion": "^2.4.0",
+		"@lottiefiles/dotlottie-react": "^0.10.0",
 		"@nanostores/react": "^0.8.0",
 		"@noble/curves": "^1.6.0",
 		"@number-flow/react": "^0.3.0",
@@ -81,28 +82,28 @@
 		"buffer": "^6.0.3",
 		"clsx": "^2.1.1",
 		"eslint-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
-		"expo": "^52.0.6",
+		"expo": "^52.0.11",
 		"expo-asset": "~11.0.1",
 		"expo-barcode-generator": "^3.0.2",
 		"expo-blur": "~14.0.1",
-		"expo-camera": "~16.0.5",
+		"expo-camera": "~16.0.7",
 		"expo-clipboard": "~7.0.0",
 		"expo-constants": "~17.0.3",
 		"expo-crypto": "~14.0.1",
 		"expo-font": "~13.0.1",
 		"expo-haptics": "~14.0.0",
-		"expo-image": "~2.0.0",
-		"expo-linking": "~7.0.2",
-		"expo-router": "~4.0.5",
+		"expo-image": "~2.0.2",
+		"expo-linking": "~7.0.3",
+		"expo-router": "~4.0.9",
 		"expo-sharing": "~13.0.0",
-		"expo-splash-screen": "~0.29.9",
+		"expo-splash-screen": "~0.29.13",
 		"expo-status-bar": "~2.0.0",
 		"expo-symbols": "~0.2.0",
-		"expo-system-ui": "~4.0.2",
+		"expo-system-ui": "~4.0.4",
 		"expo-web-browser": "~14.0.1",
 		"framer-motion": "^11.11.17",
 		"jwt-decode": "^4.0.0",
-		"lottie-react-native": "7.0.0",
+		"lottie-react-native": "7.1.0",
 		"lucide-react": "^0.456.0",
 		"lucide-react-native": "^0.456.0",
 		"nanostores": "^0.11.3",
@@ -111,7 +112,7 @@
 		"react": "18.3.1",
 		"react-compiler-runtime": "^19.0.0-beta-a7bf2bd-20241110",
 		"react-dom": "18.3.1",
-		"react-native": "0.76.1",
+		"react-native": "0.76.3",
 		"react-native-actions-sheet": "^0.9.7",
 		"react-native-buffer": "^6.0.3",
 		"react-native-css-interop": "0.1.22",
@@ -121,7 +122,7 @@
 		"react-native-quick-base64": "^2.1.2",
 		"react-native-reanimated": "^3.16.1",
 		"react-native-safe-area-context": "4.12.0",
-		"react-native-screens": "^4.0.0",
+		"react-native-screens": "~4.1.0",
 		"react-native-svg": "15.8.0",
 		"react-native-web": "~0.19.13",
 		"react-qr-code": "^2.0.15",
@@ -141,7 +142,7 @@
 		"eslint-config-expo": "~8.0.1",
 		"husky": "^9.1.6",
 		"jest": "^29.7.0",
-		"jest-expo": "~52.0.1",
+		"jest-expo": "~52.0.2",
 		"jscodeshift": "17.1.1",
 		"lint-staged": "^15.2.10",
 		"react-native-svg-transformer": "^1.5.0",
