--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
 		"expo-system-ui": "~4.0.4",
 		"expo-web-browser": "~14.0.1",
 		"framer-motion": "^11.11.17",
+		"hex-rgb": "^5.0.0",
 		"jwt-decode": "^4.0.0",
 		"lottie-react-native": "7.1.0",
 		"lucide-react": "^0.456.0",
