--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
 		"react-use": "^17.5.1",
 		"swr": "^2.2.5",
 		"tailwindcss": "^3.4.14",
-		"undefined": "^0.1.0"
+		"undefined": "^0.1.0",
+		"vconsole": "^3.15.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.0",
