chore: restore webmarketplace

--- a/package.json
+++ b/package.json
@@ -130,6 +130,9 @@
 		"react-native-web": "~0.19.13",
 		"react-qr-code": "^2.0.15",
 		"react-use": "^17.5.1",
+		"react-virtualized-auto-sizer": "^1.0.24",
+		"react-window": "^1.8.10",
+		"react-window-infinite-loader": "^1.0.9",
 		"swr": "^2.2.5",
 		"tailwindcss": "^3.4.14",
 		"undefined": "^0.1.0",
@@ -142,6 +145,7 @@
 		"@types/jest": "^29.5.14",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
+		"@types/react-window-infinite-loader": "^1.0.9",
 		"eslint": "^9.14.0",
 		"eslint-config-expo": "~8.0.1",
 		"husky": "^9.1.6",
