--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,54 @@
 			"type": "image/svg+xml"
 		},
 		{
+			"purpose": "maskable",
+			"sizes": "1024x1024",
+			"src": "maskable/maskable_icon.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "48x48",
+			"src": "maskable/maskable_icon_x48.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "72x72",
+			"src": "maskable/maskable_icon_x72.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "96x96",
+			"src": "maskable/maskable_icon_x96.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "128x128",
+			"src": "maskable/maskable_icon_x128.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "192x192",
+			"src": "maskable/maskable_icon_x192.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "384x384",
+			"src": "maskable/maskable_icon_x384.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "512x512",
+			"src": "maskable/maskable_icon_x512.png",
+			"type": "image/png"
+		},
+		{
 			"src": "windows11/SmallTile.scale-100.png",
 			"sizes": "71x71"
 		},
