--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"license": "0BSD",
 	"main": "app/main",
 	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
 		"start": "expo start -c",
 		"reset-project": "node ./scripts/reset-project.js",
@@ -20,6 +21,9 @@
 	},
 	"jest": {
 		"preset": "jest-expo"
+	},
+	"eslintConfig": {
+		"extends": ["expo", "eslint:recommended"]
 	},
 	"lint-staged": {
 		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
@@ -83,6 +87,7 @@
 		"buffer": "^6.0.3",
 		"clsx": "^2.1.1",
 		"eslint-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
+		"eslint-plugin-react-hooks": "^5.1.0",
 		"expo": "^52.0.17",
 		"expo-asset": "~11.0.1",
 		"expo-barcode-generator": "^3.0.2",
@@ -142,12 +147,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.26.0",
 		"@biomejs/biome": "^1.9.4",
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.16.0",
 		"@react-native/metro-config": "^0.76.1",
 		"@types/jest": "^29.5.14",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
 		"@types/react-window-infinite-loader": "^1.0.9",
-		"eslint": "^9.14.0",
+		"eslint": "^9.16.0",
 		"eslint-config-expo": "~8.0.1",
 		"husky": "^9.1.6",
 		"jest": "^29.7.0",
