--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
 		],
 		"experiments": {
 			"typedRoutes": true,
-			"reactCompiler": true
+			"reactCompiler": true,
+			"reactCanary": true
 		}
 	}
 }
