chore: test sell

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"test": "jest --watchAll",
 		"postinstall": "npx setup-skia-web && npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css.web.css",
 		"ts": "bunx --bun tsc -w --noEmit --project tsconfig.json",
-		"format": "bunx @biomejs/biome check --write ./",
+		"format": "bunx @biomejs/biome format --write ./",
+		"check": "bunx @biomejs/biome check --write ./",
 		"prepare": "husky",
 		"build:web": "expo export -p web",
 		"serve:web": "bunx serve dist",
