--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
 		"swr": "^2.2.5",
 		"tailwindcss": "^3.4.14",
 		"undefined": "^0.1.0",
-		"vconsole": "^3.15.1"
+		"vconsole": "^3.15.1",
+		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.0",
