--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"@gluestack-ui/divider": "^0.1.10",
 		"@gluestack-ui/fab": "^0.1.22",
 		"@gluestack-ui/form-control": "^0.1.19",
-		"@gluestack-ui/icon": "^0.1.23",
+		"@gluestack-ui/icon": "^0.1.25",
 		"@gluestack-ui/image": "^0.1.11",
 		"@gluestack-ui/input": "^0.1.32",
 		"@gluestack-ui/link": "^0.1.23",
@@ -66,7 +66,7 @@
 		"@gluestack-ui/switch": "^0.1.23",
 		"@gluestack-ui/textarea": "^0.1.24",
 		"@gluestack-ui/toast": "^1.0.8",
-		"@gluestack-ui/tooltip": "^0.1.35",
+		"@gluestack-ui/tooltip": "^0.1.37",
 		"@gorhom/bottom-sheet": "^5.0.5",
 		"@legendapp/motion": "^2.4.0",
 		"@lottiefiles/dotlottie-react": "^0.10.0",
@@ -151,6 +151,7 @@
 		"@eslint/eslintrc": "^3.2.0",
 		"@eslint/js": "^9.16.0",
 		"@react-native/metro-config": "^0.76.1",
+		"@tsconfig/bun": "^1.0.7",
 		"@types/jest": "^29.5.14",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
