--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
 		"react-native-safe-area-context": "4.12.0",
 		"react-native-screens": "~4.1.0",
 		"react-native-svg": "15.8.0",
+		"react-native-view-shot": "~4.0.3",
 		"react-native-web": "~0.19.13",
 		"react-qr-code": "^2.0.15",
 		"react-use": "^17.5.1",
