--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
 		"hex-rgb": "^5.0.0",
 		"is-ua-webview": "^1.1.2",
 		"jwt-decode": "^4.0.0",
+		"lodash.isequal": "^4.5.0",
 		"lottie-react-native": "7.1.0",
 		"lucide-react": "^0.456.0",
 		"lucide-react-native": "^0.456.0",
@@ -154,6 +155,7 @@
 		"@react-native/metro-config": "^0.76.1",
 		"@tsconfig/bun": "^1.0.7",
 		"@types/jest": "^29.5.14",
+		"@types/lodash.isequal": "^4.5.8",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
 		"@types/react-window-infinite-loader": "^1.0.9",
